--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Only during development
+entry.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,6 +130,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+examples/.env
 
 # Spyder project settings
 .spyderproject
